[gd_scene load_steps=4 format=3 uid="uid://b472rl8vw03d5"]

[ext_resource type="Script" path="res://entities/scripts/enemy.gd" id="1_vheyf"]
[ext_resource type="PackedScene" uid="uid://dd66k41qg80ii" path="res://objects/crops/Carrot/carrot_growth_3.tscn" id="2_746hg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tg8e0"]
radius = 0.4

[node name="enemy" type="CharacterBody3D"]
floor_constant_speed = true
floor_max_angle = 1.309
floor_snap_length = 0.3
script = ExtResource("1_vheyf")

[node name="mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 1, 0)
skeleton = NodePath("../..")

[node name="temp_face" type="Label3D" parent="mesh"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.512645, 0.54542, 0.036372)
text = "x     x
...."

[node name="health" type="Label3D" parent="mesh"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.40431, 0)
billboard = 2
font_size = 45

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.5
agent_height_offset = 0.5
avoidance_enabled = true
max_neighbors = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tg8e0")

[node name="timers" type="Node" parent="."]

[node name="death_timer" type="Timer" parent="timers"]
wait_time = 1.5

[node name="attack_timer" type="Timer" parent="timers"]

[node name="cool_down_timer" type="Timer" parent="timers"]

[node name="carrot_growth_3" parent="." instance=ExtResource("2_746hg")]
transform = Transform3D(1, 0, 0, 0, 1.86, 0, 0, 0, 1, -0.0409542, 0.967997, 0.00993416)

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="timers/death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="timers/attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="timers/cool_down_timer" to="." method="_on_cool_down_timer_timeout"]
